--- a/website/newsletter/229/index.mdx
+++ b/website/newsletter/229/index.mdx
@@ -51,7 +51,27 @@ The only way to attend the conference in person is to win a ticket lottery that 
 Fortunately, if you’re not one of the lucky ones, the event will be livestreamed for free.
 
 - 💸 [Product for Engineers - Good taste makes great products: Simple design principles every engineer should know](https://go.posthog.com/twir-apr9)
+- 📣 [The Future of Redwood Launches Today](https://community.redwoodjs.com/t/the-future-of-redwood-launches-today/7938): The former project gets renamed to Redwood GraphQL and enters maintenance mode. [RedwoodSDK](https://redwoodjs.com/) is the new path for the framework under new leadership.
+- 💬 [Next.js RFC – Deployment Adapters API](https://github.com/vercel/next.js/discussions/77740): Vercel plans to support adapters to deploy Next.js to any hosting provider.
+- 🐦 [Tanner Linsley – TanStack Router \`intent\` preloading will predict where your users cursor will go](https://x.com/tannerlinsley/status/1908723776650355111)
+- 🔐 [React Router and the Remix’ed path](https://zhero-web-sec.github.io/research-and-things/react-router-and-the-remixed-path): Vulnerability discovered affecting both React Router and Remix, a flaw for a potential DoS attack through cache poisoning.
+- 📜 [React for Two Computers](https://overreacted.io/react-for-two-computers/): Dan Abramov expands on his React Conf talk with fresh insights to help you build a solid mental model of React Server Components and their origins.
+- 📜 [Advanced React in the Wild](https://largeapps.dev/case-studies/advanced/): A great case study outlining 5 companies that have significantly improved the performance metrics of their React & Next.js sites and how they did it.
+- 📜 [React & live streaming: How to include video mixing in your app](https://blog.swmansion.com/react-live-streaming-how-to-include-video-mixing-in-your-app-c460e09da7a8). A short tutorial explaining how to mix live video with React syntax and stream the output directly from the browser.
+- 📜 [Why We Moved off Next.js](https://documenso.com/blog/why-we-moved-off-next-js): Quick feedback from the Documenso project, moving from Next.js App Router to Vite and React Router.
+- 📜 [React.memo Demystified: When It Helps and When It Hurts](https://cekrem.github.io/posts/react-memo-when-it-helps-when-it-hurts): A concise explanation of common misconceptions and hidden pitfalls of memoization.
+- 📜 [React Reconciliation: The Hidden Engine Behind Your Components](https://cekrem.github.io/posts/react-reconciliation-deep-dive/): Practical guidelines and clean architecture tips to ensure best performance with React reconciler
+- 📜 [Why you need a custom context provider](https://gabrielpichot.fr/blog/why-you-need-a-custom-context-provider/): A nice interactive article that shows creating a custom Context Provider wrapper component can reduce un-necessary re-renders.
 - 💸 [Supabase breaks the norms of traditional software architecture. Learn how.](https://go.clerk.com/pkKoKSg)
+- 📦 [React Router 7.5 – new `route.lazy` API](https://github.com/remix-run/react-router/blob/main/CHANGELOG.md#v750): Allows for more granular lazy loading.
+- 📦 [Cloudflare Vite Plugin 1.0](https://blog.cloudflare.com/introducing-the-cloudflare-vite-plugin/): Brings official support for React Router v7. Leverages Vite v6 Environment API so that your local dev server matches the production Cloudflare Workers runtime.
+- 📦 [Fastify React 1.0](https://github.com/fastify/fastify-vite/releases/tag/react-v1.0.0): This new package might help you assemble your custom React meta-framework based on the Fastify web server and Vite (creating your own “Mini Next.js”). It supports React 19, and RSCs will come later. See also the related launch post ([React Server Confusion](https://hire.jonasgalvez.com.br/2025/apr/8/react-server-confusion/)) which also gives a good overview of the state of RSC support outside Webpack.
+- 📦 [Apollo Client Next.js integration](https://www.apollographql.com/blog/apollo-client-integration-nextjs-officially-released): The experimental GraphQL client integration package is now officially stable, including a new implementation for `PreloadQuery` to help you avoid request waterfalls. Apollo Client v4 is now in alpha, and integration packages for React Router / TanStack Start being worked on.
+- 📦 [Waku 0.22 – Announcing API routes](https://waku.gg/blog/api-routes)
+- 📦 [Astro 5.6 – Global `astro:env` and experimental sessions on Cloudflare, experimental cookie-less sessions](https://astro.build/blog/astro-560/)
+- 📦 [Hydrogen – March 2025 release – Support for Vite 6, turn on Remix `v3_routeConfig` flag 6](https://hydrogen.shopify.dev/update/march-2025)
+- 🎥 [Theo – A breakdown of style solutions for 2025](https://www.youtube.com/watch?v=lIUp8bdKiq4)
+- 🎥 [Youssef Benlemlih – The Magic Of Compound Components in React](https://www.youtube.com/watch?v=WSM2MpJIwFg)
 
 <SubscribeFormEmbed placement="middle" />
 
