--- a/website/newsletter/229/index.mdx
+++ b/website/newsletter/229/index.mdx
@@ -101,9 +101,32 @@ Our platform is built by developers managing high-traffic applications who under
 
 ## 📱 React-Native {#react-native}
 
-<Todo />
+[![React Native 0.79](/emails/issues/229/react-native-0.79.png)](https://reactnative.dev/blog/2025/04/08/react-native-0.79)
+
+**[React Native 0.79 – Faster tooling and much more](https://reactnative.dev/blog/2025/04/08/react-native-0.79)**
+
+- Metro: 3x faster cold startup and package exports support
+- JavaScriptCore (JSC) moving to a Community Package
+- iOS: Swift-Compatible Native Modules registration
+- Android: Faster app startup thanks to skipping the JS bundle compression
+- Removal of Remote JS Debugging
+
+Recently, the React Native core team switched to more frequent release cycles but nonetheless this release is exciting.
 
 - 💸 [Radon IDE – More than 20,000 engineers have already chosen it for a smoother, all-in-one development experience. It's your turn.](https://ide.swmansion.com/?utm_source=thisweekinreact.com)
+- 👀 [Expo – React 19.1 `captureOwnerStack` will enable improved error messages](https://github.com/expo/expo/pull/35866#issuecomment-2789891297)
+- 💬 [React Native RFC – Removing deep imports from react-native](https://github.com/huntie/react-native-discussions-and-proposals/blob/proposal-deprecate-subpath-imports/proposals/0894-deprecate-subpath-imports.md): This change allows to define what functions are exported from packages shrinking the API surface area. The goal is to provide a more stable API throughout the ecosystem.
+- 🐦 [Ben Awad – describes his journey to reduce Application Not Responding (ANR) errors on Android](https://x.com/benawad/status/1908860185113665889)
+- ☂️ [Help React Native core team Kotlin-ify React Native tests](https://github.com/facebook/react-native/issues/50513): Great way to start contributing to an open source project
+- 📅 [React Native London Meetup – April 17th, 2025](https://guild.host/events/react-native-london-e0q1f1)
+- 📜 [Understanding and comparing fingerprints in Expo apps](https://expo.dev/blog/understanding-and-comparing-fingerprints-in-expo-apps): Using hashes to compare whether there was a change in a native build of a React Native & Expo app.
+- 📜 [Cut CI from 20 minutes to 6 with EAS Workflows and EAS Updates](https://shift.infinite.red/cut-ci-from-20-minutes-to-6-with-eas-workflows-and-eas-updates-8d928fe5dcfc): Infinite Red shows how they improved their CI time by fingerprinting native builds.
+- 📜 [Playing Audio in React Native with react-native-track-player](https://addjam.com/blog/2025-04-04/playing-audio-in-react-native/)
+- 📜 [Vercel & React Native – A New Era of Mobile Development?](https://www.thisdot.co/blog/vercel-and-react-native-a-new-era-of-mobile-development): Speculation on what steps Vercel might take in the React Native space.
+- 📜 [A Guide to Logging in React Native](https://blog.sentry.io/a-guide-to-logging-in-react-native/): Including console, native and system logs.
+- 📦 [Builder Bob 0.40](https://github.com/callstack/react-native-builder-bob/releases/tag/react-native-builder-bob%400.40.0)
+- 🎥 [Simon Grimm – The ultimate way to build apps in 2025](https://www.youtube.com/watch?v=acj7-3-EQWM)
+- 🎙️ [React Native Radio 327 – Automating App Releases with Pratul Kalia](https://infinite.red/react-native-radio/rnr-327-automating-app-releases-with-pratul-kalia)
 
 ---
 
