--- a/website/newsletter/229/index.mdx
+++ b/website/newsletter/229/index.mdx
@@ -132,7 +132,15 @@ Recently, the React Native core team switched to more frequent release cycles bu
 
 ## 🔀 Other {#other}
 
-<Todo />
+- 👀 [Agenda for the 107th meeting of Ecma TC39](https://github.com/tc39/agendas/blob/main/2025/04.md): Next week the TC39 committee meets again to discuss many new exciting proposals, including Enums, Composites, `export defer`, and more.
+- 📜 [Debugging JavaScript Memory Leaks](https://bun.sh/blog/debugging-memory-leaks)
+- 📜 [First Look at The Modern CSS `attr()`](https://ishadeed.com/article/modern-attr/)
+- 📜 [A Deep Dive into OSI, TCP/UDP, HTTP, and More](https://www.deepintodev.com/blog/how-data-travels-the-world-to-reach-your-screen)
+- 📦 [Tailwind CSS 4.1 – Text shadows, masks, and tons more](https://tailwindcss.com/blog/tailwindcss-v4-1)
+- 📦 [Rspack 1.3.1 – Run JS loaders in parallel](https://x.com/rspack_dev/status/1907336863096123484)
+- 📦 [Turborepo 2.5](https://turbo.build/blog/turbo-2-5)
+- 📦 [Rstest – The testing framework powered by Rspack (WIP)](https://github.com/web-infra-dev/rstest)
+- 📦 [Bun 1.2.9 – Redis client, Node.js compatibility, `require` improvements](https://bun.sh/blog/bun-v1.2.9)
 
 ---
 
