--- a/website/newsletter/229/index.mdx
+++ b/website/newsletter/229/index.mdx
@@ -126,6 +126,7 @@ Recently, the React Native core team switched to more frequent release cycles bu
 - 📜 [A Guide to Logging in React Native](https://blog.sentry.io/a-guide-to-logging-in-react-native/): Including console, native and system logs.
 - 📦 [Builder Bob 0.40](https://github.com/callstack/react-native-builder-bob/releases/tag/react-native-builder-bob%400.40.0)
 - 🎥 [Simon Grimm – The ultimate way to build apps in 2025](https://www.youtube.com/watch?v=acj7-3-EQWM)
+- 🎥 [Catalin Miron \- Expo Router: Tabs, Stacks, Deep Linking Fix](https://www.youtube.com/watch?v=HmbBzw0rF6w)
 - 🎙️ [React Native Radio 327 – Automating App Releases with Pratul Kalia](https://infinite.red/react-native-radio/rnr-327-automating-app-releases-with-pratul-kalia)
 
 ---
