--- a/website/newsletter/229/index.mdx
+++ b/website/newsletter/229/index.mdx
@@ -107,13 +107,13 @@ Our platform is built by developers managing high-traffic applications who under
 
 **[React Native 0.79 – Faster tooling and much more](https://reactnative.dev/blog/2025/04/08/react-native-0.79)**
 
+Recently, the React Native core team switched to more frequent release cycles, so this is a smaller release, but nonetheless exciting in terms of performance improvements. Here are the highlights:
+
 - Metro: 3x faster cold startup and package exports support
 - JavaScriptCore (JSC) moving to a Community Package
 - iOS: Swift-Compatible Native Modules registration
 - Android: Faster app startup thanks to skipping the JS bundle compression
 - Removal of Remote JS Debugging
-
-Recently, the React Native core team switched to more frequent release cycles but nonetheless this release is exciting.
 
 ---
 
