--- a/website/newsletter/229/index.mdx
+++ b/website/newsletter/229/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /229
-title: "This Week In React #229: ..."
+title: "This Week In React #229: React Conf, React Router, Next.js RFC, Redwood, Apollo Client, Waku | React Native 0.79, React Native RFC, Builder Bob, Fingerprinting | Tailwind, Rspack, Rstest Turborepo, Bun"
 authors: [kacperkapusciak, tomekzaw]
 date: 04-09-2025
 unlisted: true
