--- a/website/newsletter/229/index.mdx
+++ b/website/newsletter/229/index.mdx
@@ -151,8 +151,8 @@ Recently, the React Native core team switched to more frequent release cycles, s
 
 ## 🤭 Fun {#fun}
 
-[![alt](/emails/issues/229/meme1.png)](https://x.com/thekitze/status/1907508349442339078)
+[![alt](/emails/issues/229/meme1.jpg)](https://x.com/thekitze/status/1907508349442339078)
 
-[![alt](/emails/issues/229/meme2.png)](https://x.com/sebastienlorber/status/1909916465190383982)
+[![alt](/emails/issues/229/meme2.jpg)](https://x.com/sebastienlorber/status/1909916465190383982)
 
 See ya! 👋
