--- a/website/newsletter/229/index.mdx
+++ b/website/newsletter/229/index.mdx
@@ -8,7 +8,7 @@ unlisted: true
 
 Hi everyone!
 
-This week, we welcome 2 new contributors to help ensure the continuity of the newsletter throughout the year, even when Seb takes a break.
+This week, I'm excited to introduce 2 new contributors to help me the newsletter!
 
 **Tomasz and Kacper from [Software Mansion](https://swmansion.com/?utm_source=thisweekinreact)** here – you may already know us from libraries like Reanimated or Gesture Handler. We're happy to be among the authors of the This Week in React newsletter!
 
