--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/authors.yml
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/authors.yml
@@ -42,6 +42,7 @@ kacperkapusciak:
   page: true
   socials:
     x: kacperkapusciak
+    github: kacperkapusciak
 
 tomekzaw:
   name: Tomasz Zawadzki
@@ -51,3 +52,4 @@ tomekzaw:
   page: true
   socials:
     x: tomekzaw_
+    github: tomekzaw
