--- a/website/newsletter/229/index.mdx
+++ b/website/newsletter/229/index.mdx
@@ -43,13 +43,9 @@ So next time your PM asks for a new dashboard, skip the existential crisis. [Jus
 
 **[React Conf is back for 2025](https://conf.react.dev/)**
 
-The React conference is happening on October 7-8, 2025 in Henderson, Nevada, US. 🇺🇸
+The React conference is happening on October 7-8, 2025 in Henderson, Nevada, 🇺🇸 US. It’s where the React & React Native team shares official announcements live.
 
-It’s where the React & React Native team shares official announcements live.
-
-The only way to attend the conference in person is to win a ticket lottery that lets you purchase up to 2 tickets.
-
-Fortunately, if you’re not one of the lucky ones, the event will be livestreamed for free.
+The only way to attend the conference in person is to win a ticket lottery that lets you purchase up to 2 tickets. Fortunately, if you’re not one of the lucky ones, the event will be livestreamed for free.
 
 ---
 
