--- a/website/newsletter/229/index.mdx
+++ b/website/newsletter/229/index.mdx
@@ -7,7 +7,7 @@ date: 04-09-2025
 
 Hi everyone!
 
-This week, I'm excited to introduce 2 new contributors to help me the newsletter!
+This week, I'm excited to introduce 2 new contributors to help me with the newsletter!
 
 **Tomasz and Kacper from [Software Mansion](https://swmansion.com/?utm_source=thisweekinreact)** here – you may already know us from libraries like Reanimated or Gesture Handler. We're happy to be among the authors of the This Week in React newsletter!
 
