--- a/website/newsletter/230/index.mdx
+++ b/website/newsletter/230/index.mdx
@@ -1,14 +1,17 @@
 ---
 slug: /230
-title: "This Week In React #230: ..."
+title: "This Week In React #230: Next.js, Turbopack, Rspack, Activity, RSC, oRPC, tweakcn | Expo, Fantom, FlashList, SVG, Tracy, New Arch, Radon | TC39, Temporal, Zod, Bare, Rolldown, CSS Functions"
 authors: [slorber]
 date: 04-16-2025
-unlisted: true
 ---
 
 Hi everyone!
 
-<Todo />
+This week we have a great Next.js release with significant build speed improvements. I'm also quite excited to see the activity around the upcoming React `<Activity>` component. Many great community blog posts to read too!
+
+React Native also has great releases with the new Expo SDK in beta, and the next version of FlashList in alpha.
+
+Let's dive in! 👇
 
 <!-- truncate -->
 
@@ -34,7 +37,9 @@ What was needed was a **redefinition of how PMs and engineers work together**, o
 
 ## ⚛️ React {#react}
 
-[Next.js 15.3](https://nextjs.org/blog/next-15-3)
+[![Next.js 15.3](/emails/issues/230/nextjs.jpg)](https://nextjs.org/blog/next-15-3)
+
+**[Next.js 15.3](https://nextjs.org/blog/next-15-3)**
 
 A new minor version of Next.js is out, with highlights:
 
