--- a/website/newsletter/231/index.mdx
+++ b/website/newsletter/231/index.mdx
@@ -138,6 +138,8 @@ Thankfully, all those copy the API of `FlatList` so it’s easy to switch back a
 
 ## 🤭 Fun {#fun}
 
+[![React Compiler RC meme - shows a cat in a React Compiler RollerCoaster](/emails/issues/231/meme0.jpg)](https://x.com/potetotes/status/1914855126348480850)
+
 [![Evan Bacon - Coming back to Expo after spending an hour in Android Studio - Photo of Katy Perry kissing the ground after returning from her space flight](/emails/issues/231/meme1.jpg)](https://x.com/Baconbrix/status/1913353166483058931)
 
 [![A huge vertical screen with "package.json" deps and huge horizontall screen with "tailwind class names"](/emails/issues/231/meme2.jpg)](https://x.com/trashh_dev/status/1893339204710539265)
